--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+
+#logging.level.org.springframework.amqp=DEBUG
+#logging.level.org.springframework.amqp.rabbit=DEBUG
